<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <EditText
        android:id="@+id/editText_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_nama"/>

    <EditText
        android:id="@+id/editText_alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alamat"/>

    <EditText
        android:id="@+id/editText_nohp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/no_hp"
        android:inputType="number"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:onClick="sendRegister"/>

</LinearLayout>